CSS/styles.css
/* ... */
.work-list {
  margin-top: 7px;
}

#img-ninth {
  margin-left: 5px;
  object-fit: cover;
}

.work-modals {
  margin-left: 25px;
  display: inline-block;
}

.tnail-caps {
  font-size: 12px;
}

.tnail-center {
  margin-left: 20px;
}

/**********  Projects **********/
.projects {
  background-color: var(--greeney);
  background-image: radial-gradient(farthest-side at 100% 12%, rgba(255,255,255,0.21) , var(--greeney) 79%);

}

.head-highlight {
  color: white;
}

.proj-nodec:hover {
  text-decoration: none;
  text-shadow: 5px 5px 7px var(--violet);
}

/**********  Education  **********/
.h-style {
  font-size: 1.17em;
  font-weight: 600;
}

p + h3 {
  margin-top: 30px;
}

.shrink1, .shrink2 {
  margin-top: 15px;
}

.courses {
  margin: 5px auto;
  clear: left;
 }

.text {
  background: var(--violet)
  /* linear-gradient(rgba(58,79,65,0.1), rgba(58,79,65,0.1)), */
  url(../images/background/mountaintop-education.jpg) 30% 55%
  no-repeat fixed;
  background-size: cover;
  text-shadow: 1px 2px 2px var(--ivory);
}

.text h2 {
  text-shadow: 3px 2px 5px var(--ivory);
}

.text h3 {
  text-shadow: 2px 1px 4px var(--ivory);
}
.text h4, .text h5 {
    text-shadow: 2px 1px 3px var(--ivory);
}

.tighten {
  margin-top: 17px;
}

.ed-desc {
  font-size: 18px;
  font-weight: bold;
}

.p-shad {
  box-shadow: 1px 1px 7px var(--violet);
}

ul h5:first-child {
  margin-top: 19px;
}

ul.shrink1 h5 {
  margin-top: 0;
}

.column {
  flex: 20%;
  max-width: 20%;
  padding: 0px;
  flex-wrap: wrap;
}

.sidebside {
  float: left;
  list-style: none;
  background: url("../images/edu/check-mark-blue-svg.svg") no-repeat center left;
  margin: 0 15px 10px 15px;
  padding-left: 25px;
}

li.sidebside:first-of-type {
  margin-left: 0;
}

a.ed-link {
  color: var(--lime);
  text-shadow: 2px 2px 5px var(--violet);
}

li.courses a:hover {
  color: black;
  text-shadow: none;
}

.skill-badge {
  float: left;
  list-style-type: none;
  background: url("../images/edu/check-mark-blue-svg.svg") no-repeat center left;
  margin: 0 15px 10px 15px;
  padding-left: 25px;
}

.tut-prog {
  margin-left: -15px;
}

a.ed-link:hover {
  text-decoration: none;
  color: var(--violet);
}

#assess-label {
  margin-bottom: 9px;
}

#w3-head {
  margin: 20px 0 10px 0;
}

#left-align {
  margin-left: 0px;
  padding-left: 3px;
}
/*****  Thumbnail Hover Effects  *****/
.cert-sm {
  border-radius: 2px;
  cursor: pointer;
  transition: 0.2s;
  margin-bottom: 10px;
}

.cert-sm:hover {
  opacity: 0.9;
  box-shadow: 0 0 2px 1px black;
}

.level {
  margin-bottom: -10px;
  margin-top: 15px;
}

.grid {
  display: inline-grid;
  grid-template-columns: 180px 100px;
  grid-gap: 5px;
  list-style-type: circle;
}

.figure {
  margin-top: -10px;
  margin-bottom: 5px;
  margin-left: -5px;
}
/**********  The Modal  **********/
.modal1 {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: var(--violet);
  z-index: 4;
}

/*****  Modal Content (Image) *****/
.modal-inner1 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

.modal-inner2 {
  margin: auto;
  display: block;
  height: 80%;
  max-height: 700px;
}

.modal-inner3 {
  margin: auto;
  display: block;
  height: 100%;
  max-height: 686px;
}

.modal-inner5 {
  margin: auto;
  display: block;
  width: 100%;
  max-width: 900px;
}
/*****  Caption of Modal Image  *****/
#caption, #caption2, #caption3, #caption4, #caption5 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: var(--light-silver);
  padding: 10px 0;
  height: 150px;
  text-shadow: none;
}

/*****  Add Animation  *****/
.modal-inner1, .modal-inner2, .modal-inner3, .modal-inner4, .modal-inner5, #caption, #caption2, #caption3, #caption4, #caption5 {
  animation-name: zoom;
  animation-duration: 1.3s;
}

@keyframes zoom {
  from {transform: scale(0.1)}
  to {transform: scale(1) rotate(360deg)}
}

/*****  Close Button  *****/
.exit, .exit2, .exit3, .exit4, .exit5 {
  position: absolute;
  top: 20px;
  right: 35px;
  color: var(--light-silver);
  font-size: 55px;
  font-weight: bold;
  transition: 0.3s;
}

.exit:hover, .exit:focus, .exit2:hover, .exit2:focus, .exit3:hover, .exit3:focus, .exit4:hover, .exit4:focus, .exit5:hover, .exit5:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
  text-shadow: 0 0 2px 1px rgba(200,0,0,0.5);
}

/* #imgModal1, #imgModal2, #imgModal3, #imgModal4 {
  z-index: 4;
} */


/**********  Media Queries  **********/

@media (max-width: 489px) {
  .profile {
    max-width: 130px;
  }
}

@media (max-width: 607px) {
  .profile {
    max-width: 150px;
  }
}

@media only screen and (max-width: 700px) {
  .modal-inner1, .modal-inner3 {
    width: 100%;
    height: auto;
  }
}

@media (max-width: 725px) {
 .prof-pic {
   max-width: 165px;
  }
}

@media(max-width: 800px) {
 .heading {
   flex-wrap: wrap;
   text-align: center;
   justify-content: space-around;
   }
 .prof-pic {
   order: -1;
  }
}

@media (max-width: 903px) {
  .profile {
    max-width: 175px;
  }
}

@media (max-width: 975px) {
 .shrink1 {
   margin-top: 19px;
   margin-bottom: 0px;
   }
  .shrink2 {
     margin-top: 0px;
     margin-bottom: 0px;
     }
  .img-att {
    margin-top: 23px;
  }
}

@media (max-width: 992px) {
  .column {
    flex: 30%;
    max-width: 30%;
  }
}

@media (max-width: 730px) {
 .container {
   grid-template-columns: 1fr;
  }
  .img-att {
    margin: 0;
    padding: 0;
  }
  .column {
    flex: 20%;
    max-width: 20%;
  }
  .img-att {
    margin-top: 23px;
  }
}
/* ... */

